syntax = "proto3";

package api;

message UnsealSecretInput {
    bytes secret = 1;
}

message UnsealSecretOutput {
    bytes plaintext = 1;
}

message GetResourceRequest {
    string ResourcePath = 1;
}

message GetResourceResponse {
    bytes Resource = 1;
}

message KeyProviderKeyWrapProtocolInput {
    bytes KeyProviderKeyWrapProtocolInput = 1;
}

message KeyProviderKeyWrapProtocolOutput {
    bytes KeyProviderKeyWrapProtocolOutput = 1;
}

message SecureMountRequest {
    string driver = 1;
    repeated string driver_options = 2;
    string source = 3;
    string fstype = 4;
    repeated string options = 5;
    string mount_point = 6;
}

message SecureMountResponse {
    string mount_path = 1;
}

message GetPublicKeyRequest {
    string KeyId = 1;
}

message GetPublicKeyResponse {
    bytes PublicKeyPem = 1;
}

service SealedSecretService {
    rpc UnsealSecret(UnsealSecretInput) returns (UnsealSecretOutput) {};
}

service GetResourceService {
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
}

service KeyProviderService {
    rpc UnWrapKey(KeyProviderKeyWrapProtocolInput) returns (KeyProviderKeyWrapProtocolOutput) {};
}

service SecureMountService {
    rpc SecureMount(SecureMountRequest) returns (SecureMountResponse) {};
}

service GetPublicKeyService {
    rpc GetPublicKey(GetPublicKeyRequest) returns (GetPublicKeyResponse) {};
}
